===============
lmirror changes
===============

NEXT (in development)
=====================

Bug fixes
+++++++++

* If a filesystem returns an mtime of 0 - which some VFS ones will, then
  files are considered for changes rather than short circuiting. Fixes
  some test code capabilities only. (Robert Collins)

0.0.3
=====

Bug fixes
+++++++++

* Content falling precisely on the end of a buffer would hang the client -
  fixed.

* Changes in directories that haven't been modified are now picked up again.
  (Robert Collins, lp:593610)

* I/O errors while checking a local file will now cause the file to be replaced.
  (Robert Collins)

* Setting LMIRROR_PDB in the environment will enable just-in-time pdb to debug
  problems. (Robert Collins)

* Verbose mirroring is now clearer about the fact local files with the right
  content are simply skipped over. (Robert Collins)

Changes
+++++++

* ``content.conf`` can now run an external program to control filtering. See
  the manual for details.

* ``finish-change`` now supports a --dry-run (or -n) option which will scan but
  not write the changes to disk. This is useful for determining what will be
  recorded.

* ``lmirror serve`` can now perform inotify monitoring of sets, avoiding full
  disk scans on each change creation, at the cost of a full scan at server
  startup.

* There are now ``clean`` and ``install`` targets in the Makefile.

API Changes
+++++++++++

* ``l_mirror.journals.DiskUpdater`` can now callback to user code per-file.

0.0.2
=====

Changes
+++++++

* New journals will now include the mtime of files (but not directories, as
  directory mtime setting and reading is not portable). This change changes
  the disk format of journals, so 0.0.2 or newer is needed to read these
  journals.

* New command ``lmirror serve`` can serve out sets over HTTP (defaults to port
  8080).

0.0.1
=====

Changes
+++++++

* Added lmirror script and setup.py to install lmirror.
